Fix missing color change for disabled inline checkbox/radio items. (#54)

--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -284,6 +284,7 @@ input[type="month"] {
     }
 
     &.disabled {
+        color: $text-muted;
         cursor: $cursor-disabled;
     }
 }
